# containerized_url_shortener

./: .gitignore  LICENSE  README.md  docker-compose.yml
shortener_backend/: .env  README.md  dockerfile  pyproject.toml
shortener_backend/src/shortener_backend/: functions.py  main.py
shortener_backend/src/shortener_backend/model/: url_model.py
shortener_backend/src/shortener_backend/routes/: url_routes.py
shortener_backend/src/shortener_backend/schemas/: url_schema.py
shortener_frontend_nginx/: README.md  dockerfile  nginx.conf
shortener_frontend_nginx/static/: 50x.html  index.html
