[project]
name = "url-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "luiz",email = "luizfilipefmg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "url_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
